--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "portfolia",
+  "homepage":"https://github.com/ShashankBadger/shashankbadger.github.io",
   "private": true,
   "version": "0.0.0",
   "type": "module",
