--- a/package.json
+++ b/package.json
@@ -1,13 +1,15 @@
 {
   "name": "portfolia",
-  "homepage":"https://github.com/ShashankBadger/shashankbadger.github.io",
+  "homepage": "https://github.com/ShashankBadger/shashankbadger.github.io",
   "private": true,
   "version": "0.0.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d dist" 
   },
   "devDependencies": {
     "vite": "^5.0.0"
