--- a/package.json
+++ b/package.json
@@ -1,15 +1,12 @@
 {
   "name": "portfolia",
-  "homepage": "https://github.com/ShashankBadger/shashankbadger.github.io",
   "private": true,
   "version": "0.0.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d dist" 
+    "preview": "vite preview"
   },
   "devDependencies": {
     "vite": "^5.0.0"
